# gpuBuffers

./: .gitignore  .gitmodules  CMakeLists.txt  example.cpp  push.bat  update_submodule.bat  модуль для ооп обертки над конвеером опенгл.slnx
assets/shaders/: F.glsl  F_array.glsl  F_basic.glsl  F_full.glsl  V.glsl  V_array.glsl  V_basic.glsl  V_full.glsl
cmake/: BuildExample.cmake  BuildLib.cmake  FetchDependency.cmake
include/concepts/: concepts.h
include/gpu/gpuBuffer/: Buffer.h  Buffer.hpp  BufferObject.h  IndexedBufferObject.h  gpuBuffer.hpp
include/gpu/gpuBuffer/indirect/: indirect_buffer.h
include/gpu/gpuBuffer/shaderStorage/: shader_storage.h
include/gpu/gpuBuffer/uniform/: uniform_buffer.h  uniform_buffer.hpp
include/gpu/gpuBuffer/vertex/: indexedBuffer.hpp  indexed_buffer.h  indexed_buffer.hpp  vertexArray.hpp  vertexBuffer.hpp  vertex_array.h  vertex_array.hpp  vertex_buffer.h  vertex_buffer.hpp  vertex_weak_ref.h  vertex_weak_ref.hpp
include/gpu/traits/: glmTraits.h  userTraits.h
include/shaders/shader/: Shader.h
include/shaders/shaderProgram/: ShaderProgram.h
include/window/: window.h  window.inl
src/shaders/shader/: Shader.cpp
src/shaders/shaderProgram/: ShaderProgram.cpp
tests/: test_vertex_array.cpp
модуль для ооп обертки над конвеером опенгл/: модуль для ооп обертки над конвеером опенгл.cpp  модуль для ооп обертки над конвеером опенгл.vcxproj  модуль для ооп обертки над конвеером опенгл.vcxproj.filters
модуль для ооп обертки над конвеером опенгл/gpu/: traits.h
модуль для ооп обертки над конвеером опенгл/gpu/gpuBuffer/: gpuBuffer.hpp
модуль для ооп обертки над конвеером опенгл/gpu/traits/: traits.h
модуль для ооп обертки над конвеером опенгл/shaders/shaderProgram/src/: ShaderProgram.cpp
модуль для ооп обертки над конвеером опенгл/window/src/: window.inl
модуль для ооп обертки над конвеером опенгл/x64/Debug/: vc145.idb  модуль для ооп обертки над конвеером опенгл.exe.recipe  модуль для ооп обертки над конвеером опенгл.vcxproj.FileListAbsolute.txt
модуль для ооп обертки над конвеером опенгл/x64/Debug/модуль д.3a38c638.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  модуль для ооп обертки над конвеером опенгл.lastbuildstate  модуль для ооп обертки над конвеером опенгл.write.1u.tlog
